--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Museum of Alt-Rock Classics</title>
+        <title>Museum of Galactic Icons</title>
         <style>
             body {
                 margin: 0;  
